terraform/main.tf
resource "azurerm_resource_group" "main" {
  name = var.resource_group_name
  location = var.location
}

resource "azurerm_virtual_network" "main" {
    name = "message-app-vnet"
    address_space = ["10.0.0.0/16"]
    location = azurerm_resource_group.main.location
    resource_group_name = azurerm_resource_group.main.name
  
}

resource "azurerm_subnet" "main" {
    name = "internal"
    resource_group_name = azurerm_resource_group.main.name
    virtual_network_name = azurerm_virtual_network.main.name
    address_prefixes = ["10.0.1.0/24"]
  
}


resource "azurerm_public_ip" "main" {
    name = "message-app-ip"
    location = azurerm_resource_group.main.location
    resource_group_name = azurerm_resource_group.main.name
    allocation_method = "Static"
    sku = "Standard"
  
}


resource "azurerm_network_security_group" "main" {
    name = "message-app-nsg"
    location = azurerm_resource_group.main.location
    resource_group_name = azurerm_resource_group.main.name

    security_rule {
        name = "SSH"
        priority = 1001
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "22"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }

    security_rule {
        name = "HTTP"
        priority = 1002
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "80"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }

    security_rule {
        name = "HTTPS"
        priority = 1003
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "443"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }
  
}


resource "azurerm_subnet_network_security_group_association" "main" {
    subnet_id = azurerm_subnet.main.id
    network_security_group_id = azurerm_network_security_group.main.id
  
}

resource "azurerm_network_interface" "main" {
    name = "message-app-nic"
    location = azurerm_resource_group.main.location
    resource_group_name = azurerm_resource_group.main.name

    ip_configuration {
      name = "internal"
      subnet_id = azurerm_subnet.main.id
      private_ip_address_allocation = "Dynamic"
      public_ip_address_id = azurerm_public_ip.main.id
    }
  
}


resource "azurerm_linux_virtual_machine" "main" {
    name = var.vm_name
    resource_group_name = azurerm_resource_group.main.name
    location = azurerm_resource_group.main.location
    size = "Standard_B2ats_v2"
    admin_username = var.admin_username

    network_interface_ids = [
        azurerm_network_interface.main.id,
    ]

    admin_ssh_key {
      username = var.admin_username
      public_key = file(var.ssh_public_key_path)
    }

    os_disk {
      caching = "ReadWrite"
      storage_account_type = "Standard_LRS"
    }
    
    source_image_reference {
      publisher = "Canonical"
      offer = "ubuntu-24_04-lts"
      sku = "server"
      version = "latest"
    }
}
